@@ -115,6 +115,7 @@ export(".__M__initialize:methods")
 export(".__M__loadMethod:methods")
 export(".__M__show:methods")
 export(.doTracePrint)
+export(.valueClassTest)
 export("@<-")
 export(Arith)
 export(Compare)
