@@ -270,6 +270,8 @@ SEXP do_cmathfuns(SEXP call, SEXP op, SEXP args, SEXP env)
     int i, n;
 
     checkArity(op, args);
+    if (DispatchGroup("Complex", call, op, args, env, &x))
+        return x;
     x = CAR(args);
     n = length(x);
     if (isComplex(x)) {
