@@ -4,6 +4,13 @@
 See the file NEWS for changes that affect all versions of R.
 
 
+rw1081
+======
+
+File src/nmath/dnt.c was not being built for standalone Rmath library.
+
+
+
 rw1080
 ======
 
