@@ -34,14 +34,23 @@ DEPRECATED & DEFUNCT
 		CHANGES IN R VERSION 1.8.1
 
 
+NEW FEATURES
+
+    o	There is now a "Complex" S3 group generic (a side-effect of
+	fixing up the corresponding S4 group generic).
+
+
 BUG FIXES
 
     o	symnum(x) now behaves as documented when length(x) == 0 and uses
 	lower.triangular = FALSE for logical arrays.
 
-    o	c() now has a method for "noquote" objects and hence works as expected.
+    o	c() now has a method for "noquote" objects and hence works as
+	expected.
 
     o	split(1:10, c(1,2)) no longer gives a spurious warning.
+
+    o	The "Complex" S4 group generic now works.
 
 
 
